thêm url tới các trang shop và home

--- a/CarRental/Views/Shared/Components/MenuTop/Default.cshtml
+++ b/CarRental/Views/Shared/Components/MenuTop/Default.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<CarRental.Models.Menu>
 @foreach(var item in Model)
 {
-    string murl = $"/{item.Alias}.html";
+    string murl = $"/{item.Alias} ";
     
 <li>
     <a class="active" href="@murl">
