--- a/CarRental/Views/Shared/Components/Product/Default.cshtml
+++ b/CarRental/Views/Shared/Components/Product/Default.cshtml
@@ -28,6 +28,7 @@
                         <h4 class="title-2"> <a href="product-details.html">@item.CarName</a></h4>
                     </div>
                     <div class="product-rating">
+                     
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -35,8 +36,8 @@
                         <i class="fa fa-star-o"></i>
                     </div>
                     <div class="price-box">
-                        <span class="regular-price ">$60.00</span>
-                        <span class="old-price"><del>$70.00</del></span>
+                        <span class="regular-price ">$@item.SalePrice</span>
+                        <span class="old-price"><del>$@item.Price</del></span>
                     </div>
                     <a href="cart.html" class="btn product-cart">Add to Cart</a>
                 </div>
