--- a/CarRental/Views/Shared/Components/Product/Default.cshtml
+++ b/CarRental/Views/Shared/Components/Product/Default.cshtml
@@ -28,12 +28,21 @@
                         <h4 class="title-2"> <a href="product-details.html">@item.CarName</a></h4>
                     </div>
                     <div class="product-rating">
-                     
-                        <i class="fa fa-star"></i>
+                        @for(int i = 0;i<=5; i++)
+                        {
+                            if(i < item.Rate)
+                            {
+                                <i class="fa fa-star"></i>
+                            } else
+                            {
+                                <i class="fa fa-star-o"></i>
+                            }
+                        }
+                        @* <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-o"></i>
-                        <i class="fa fa-star-o"></i>
+                        <i class="fa fa-star-o"></i> *@
                     </div>
                     <div class="price-box">
                         <span class="regular-price ">$@item.SalePrice</span>
@@ -94,15 +103,25 @@
                                             <h4 class="title">@item.CarName</h4>
                                         </div>
                                         <div class="price-box">
-                                            <span class="regular-price ">$80.00</span>
-                                            <span class="old-price"><del>$90.00</del></span>
+                                            <span class="regular-price ">$@item.SalePrice</span>
+                                            <span class="old-price"><del>$@item.Price</del></span>
                                         </div>
                                         <div class="product-rating">
-                                            <i class="fa fa-star"></i>
+                                            @for(int i=0;i<=5;i++)
+                                            {
+                                                if(i < item.Rate)
+                                                {
+                                                    <i class="fa fa-star"></i>
+                                                } else
+                                                {
+                                                    <i class="fa fa-star-o"></i>
+                                                }
+                                            }
+                                           @*  <i class="fa fa-star"></i>
                                             <i class="fa fa-star"></i>
                                             <i class="fa fa-star"></i>
                                             <i class="fa fa-star-o"></i>
-                                            <i class="fa fa-star-o"></i>
+                                            <i class="fa fa-star-o"></i> *@
                                             <span>1 Review</span>
                                         </div>
                                         <p class="desc-content">we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame bel...</p>
