thêm viewcomponents  cartype( not completed yet)

--- a/CarRental/Views/Home/Index.cshtml
+++ b/CarRental/Views/Home/Index.cshtml
@@ -50,7 +50,10 @@
             </div>
             <div class="cat-2 col-md-8 col-sm-12 col-custom">
                 <div class="row">
-                    <div class="cat-3 col-md-7 col-custom">
+                    @for(int i = 0;i<=3; i++)
+                    {
+                        
+                        <div class=" col-6 col-custom mb-4">
                         <div class="categories-img mb-30">
                             <a href="#"><img src="~/assets/images/category/home1-category-2.jpg" alt=""></a>
                             <div class="categories-content">
@@ -59,7 +62,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="cat-4 col-md-5 col-custom">
+                    }
+                  @*   <div class="cat-4 col-md-5 col-custom">
                         <div class="categories-img mb-30">
                             <a href="#"><img src="~/assets/images/category/home1-category-3.jpg" alt=""></a>
                             <div class="categories-content">
@@ -85,7 +89,7 @@
                                 <h4>18 items</h4>
                             </div>
                         </div>
-                    </div>
+                    </div> *@
                 </div>
             </div>
         </div>
