cartypes were complated

--- a/CarRental/Views/Shared/_Layout.cshtml
+++ b/CarRental/Views/Shared/_Layout.cshtml
@@ -471,7 +471,7 @@
     </footer>
     <!--Footer Area End-->
     <!-- Modal -->
-    <div class="modal flosun-modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
+    @* <div class="modal flosun-modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <button type="button" class="close close-button" data-bs-dismiss="modal" aria-label="Close">
@@ -540,7 +540,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
 
     <!-- Scroll to Top Start -->
     <a class="scroll-to-top" href="#">
