--- a/CarRental/Views/Home/Index.cshtml
+++ b/CarRental/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
                 <!-- Intro Content Start -->
                 <div class="intro11-content text-left">
                     <h3 class="title-slider text-uppercase">Top Trend</h3>
-                    <h2 class="title">2022 Flower Trend</h2>
-                    <p class="desc-content">Lorem ipsum dolor sit amet, pri autem nemore bonorum te. Autem fierent ullamcorper ius no, nec ea quodsi invenire. </p>
+                    <h2 class="title" style="color:#eceff8">2022 Flower Trend</h2>
+                    <p class="desc-content" style="color:#eceff8">Lorem ipsum dolor sit amet, pri autem nemore bonorum te. Autem fierent ullamcorper ius no, nec ea quodsi invenire. </p>
                     <a href="product-details.html" class="btn flosun-button secondary-btn theme-color  rounded-0">Shop Now</a>
                 </div>
                 <!-- Intro Content End -->
@@ -20,8 +20,8 @@
                 <!-- Intro Content Start -->
                 <div class="intro11-content text-left">
                     <h3 class="title-slider black-slider-title text-uppercase">Collection</h3>
-                    <h2 class="title">Flowers and Candle <br> Birthday Gift</h2>
-                    <p class="desc-content">Lorem ipsum dolor sit amet, pri autem nemore bonorum te. Autem fierent ullamcorper ius no, nec ea quodsi invenire. </p>
+                    <h2 class="title" style="color:#eceff8">Flowers and Candle <br> Birthday Gift</h2>
+                    <p class="desc-content" style="color:#eceff8">Lorem ipsum dolor sit amet, pri autem nemore bonorum te. Autem fierent ullamcorper ius no, nec ea quodsi invenire. </p>
                     <a href="product-details.html" class="btn flosun-button secondary-btn rounded-0">Shop Now</a>
                 </div>
                 <!-- Intro Content End -->
@@ -41,56 +41,45 @@
         <div class="row">
             <div class="cat-1 col-md-4 col-sm-12 col-custom">
                 <div class="categories-img mb-30">
-                    <a href="#"><img src="~/assets/images/category/home1-category-1.jpg" alt=""></a>
+                    <a asp-controller="product"><img src="~/assets/images/CarImage/banner-left.png" alt=""></a>
                     <div class="categories-content">
-                        <h3>Potted Plant</h3>
-                        <h4>18 items</h4>
+                        <h3>Shop now</h3>
+                       @*  <h4>18 items</h4> *@
                     </div>
                 </div>
             </div>
             <div class="cat-2 col-md-8 col-sm-12 col-custom">
-                <div class="row">
-                    @for(int i = 0;i<=3; i++)
-                    {
-                        
-                        <div class=" col-6 col-custom mb-4">
-                        <div class="categories-img mb-30">
-                            <a href="#"><img src="~/assets/images/category/home1-category-2.jpg" alt=""></a>
-                            <div class="categories-content">
-                                <h3>Potted Plant</h3>
-                                <h4>18 items</h4>
+                <div class="product-slider swiper-container anime-element-multi">
+                    <div class="swiper-wrapper">
+                        @await Component.InvokeAsync("CarTypes")
+                        @* <div class="swiper-slide">
+
+                            <div class="row">
+                                @await Component.InvokeAsync("CarTypes")
                             </div>
-                        </div>
+                        </div> *@
+                        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+                        <!-- <script src="assets/js/plugins/swiper-bundle.min.js"></script> -->
+                        <!-- Slider pagination -->
+                        <div class="swiper-pagination"></div>
+                        <script>
+                            const swiper = new Swiper('.product-slider', {
+                                slidesPerView: 1,               // Hiển thị một slide tại một thời điểm
+                                spaceBetween: 10,               // Khoảng cách giữa các slide
+                                pagination: {
+                                    el: '.swiper-pagination',   // Phân trang
+                                    clickable: true,
+                                },
+                                loop: true,                      // Vòng lặp vô tận
+                                autoplay: {
+                                    delay: 3000,                 // Thời gian giữa mỗi lần chuyển slide (tính bằng ms), ví dụ: 3000ms = 3 giây
+                                    disableOnInteraction: false, // Tiếp tục autoplay ngay cả khi người dùng tương tác
+                                }
+                            });
+                        </script>
                     </div>
-                    }
-                  @*   <div class="cat-4 col-md-5 col-custom">
-                        <div class="categories-img mb-30">
-                            <a href="#"><img src="~/assets/images/category/home1-category-3.jpg" alt=""></a>
-                            <div class="categories-content">
-                                <h3>Potted Plant</h3>
-                                <h4>18 items</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cat-5 col-md-4 col-custom">
-                        <div class="categories-img mb-30">
-                            <a href="#"><img src="~/assets/images/category/home1-category-4.jpg" alt=""></a>
-                            <div class="categories-content">
-                                <h3>Potted Plant</h3>
-                                <h4>18 items</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cat-6 col-md-8 col-custom">
-                        <div class="categories-img mb-30">
-                            <a href="#"><img src="~/assets/images/category/home1-category-5.jpg" alt=""></a>
-                            <div class="categories-content">
-                                <h3>Potted Plant</h3>
-                                <h4>18 items</h4>
-                            </div>
-                        </div>
-                    </div> *@
                 </div>
+                
             </div>
         </div>
     </div>
@@ -113,87 +102,93 @@
             <div class="col-12 col-custom">
                 <div class="product-slider swiper-container anime-element-multi">
                     <div class="swiper-wrapper">
-                        <div class="single-item swiper-slide">
-                            
-                            <!--Single Product Start-->
-                            <div class="single-product position-relative mb-30">
-                                <div class="product-image">
-                                    <a class="d-block" href="product-details.html">
-                                        <img src="~/assets/images/product/1.jpg" alt="" class="product-image-1 w-100">
-                                        <img src="~/assets/images/product/2.jpg" alt="" class="product-image-2 position-absolute w-100">
-                                    </a>
-                                    <span class="onsale">Sale!</span>
-                                    <div class="add-action d-flex flex-column position-absolute">
-                                        <a href="compare.html" title="Compare">
-                                            <i class="lnr lnr-sync" data-toggle="tooltip" data-placement="left" title="Compare"></i>
+                        @foreach(var item in productFeatured)
+                        {
+                            <div class="single-item swiper-slide">
+
+                                <!--Single Product Start-->
+                                <div class="single-product position-relative mb-30">
+                                    <div class="product-image">
+                                        <a class="d-block" href="product-details.html">
+                                            <img src="~/assets/images/product/1.jpg" alt="" class="product-image-1 w-100">
+                                            <img src="~/assets/images/product/2.jpg" alt="" class="product-image-2 position-absolute w-100">
                                         </a>
-                                        <a href="wishlist.html" title="Add To Wishlist">
-                                            <i class="lnr lnr-heart" data-toggle="tooltip" data-placement="left" title="Wishlist"></i>
-                                        </a>
-                                        <a href="#exampleModalCenter" title="Quick View" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
-                                            <i class="lnr lnr-eye" data-toggle="tooltip" data-placement="left" title="Quick View"></i>
-                                        </a>
+                                        <span class="onsale">Sale!</span>
+                                        <div class="add-action d-flex flex-column position-absolute">
+                                            <a href="compare.html" title="Compare">
+                                                <i class="lnr lnr-sync" data-toggle="tooltip" data-placement="left" title="Compare"></i>
+                                            </a>
+                                            <a href="wishlist.html" title="Add To Wishlist">
+                                                <i class="lnr lnr-heart" data-toggle="tooltip" data-placement="left" title="Wishlist"></i>
+                                            </a>
+                                            <a href="#exampleModalCenter" title="Quick View" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
+                                                <i class="lnr lnr-eye" data-toggle="tooltip" data-placement="left" title="Quick View"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="product-content">
+                                        <div class="product-title">
+                                            <h4 class="title-2"> <a href="product-details.html">Flowers daisy pink stick</a></h4>
+                                        </div>
+                                        <div class="product-rating">
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star-o"></i>
+                                            <i class="fa fa-star-o"></i>
+                                        </div>
+                                        <div class="price-box">
+                                            <span class="regular-price ">$80.00</span>
+                                            <span class="old-price"><del>$90.00</del></span>
+                                        </div>
+                                        <a href="cart.html" class="btn product-cart">Add to Cart</a>
                                     </div>
                                 </div>
-                                <div class="product-content">
-                                    <div class="product-title">
-                                        <h4 class="title-2"> <a href="product-details.html">Flowers daisy pink stick</a></h4>
-                                    </div>
-                                    <div class="product-rating">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-o"></i>
-                                    </div>
-                                    <div class="price-box">
-                                        <span class="regular-price ">$80.00</span>
-                                        <span class="old-price"><del>$90.00</del></span>
-                                    </div>
-                                    <a href="cart.html" class="btn product-cart">Add to Cart</a>
-                                </div>
+                                <!--Single Product End-->
+                                <!--Single Product Start-->
+                                @* <div class="single-product position-relative mb-30">
+                            <div class="product-image">
+                            <a class="d-block" href="product-details.html">
+                            <img src="~/assets/images/product/3.jpg" alt="" class="product-image-1 w-100">
+                            <img src="~/assets/images/product/4.jpg" alt="" class="product-image-2 position-absolute w-100">
+                            </a>
+                            <div class="add-action d-flex flex-column position-absolute">
+                            <a href="compare.html" title="Compare">
+                            <i class="lnr lnr-sync" data-toggle="tooltip" data-placement="left" title="Compare"></i>
+                            </a>
+                            <a href="wishlist.html" title="Add To Wishlist">
+                            <i class="lnr lnr-heart" data-toggle="tooltip" data-placement="left" title="Wishlist"></i>
+                            </a>
+                            <a href="#exampleModalCenter" title="Quick View" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
+                            <i class="lnr lnr-eye" data-toggle="tooltip" data-placement="left" title="Quick View"></i>
+                            </a>
                             </div>
-                            <!--Single Product End-->
-                            <!--Single Product Start-->
-                            <div class="single-product position-relative mb-30">
-                                <div class="product-image">
-                                    <a class="d-block" href="product-details.html">
-                                        <img src="~/assets/images/product/3.jpg" alt="" class="product-image-1 w-100">
-                                        <img src="~/assets/images/product/4.jpg" alt="" class="product-image-2 position-absolute w-100">
-                                    </a>
-                                    <div class="add-action d-flex flex-column position-absolute">
-                                        <a href="compare.html" title="Compare">
-                                            <i class="lnr lnr-sync" data-toggle="tooltip" data-placement="left" title="Compare"></i>
-                                        </a>
-                                        <a href="wishlist.html" title="Add To Wishlist">
-                                            <i class="lnr lnr-heart" data-toggle="tooltip" data-placement="left" title="Wishlist"></i>
-                                        </a>
-                                        <a href="#exampleModalCenter" title="Quick View" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
-                                            <i class="lnr lnr-eye" data-toggle="tooltip" data-placement="left" title="Quick View"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="product-content">
-                                    <div class="product-title">
-                                        <h4 class="title-2"> <a href="product-details.html">Jasmine flowers white</a></h4>
-                                    </div>
-                                    <div class="product-rating">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-o"></i>
-                                    </div>
-                                    <div class="price-box">
-                                        <span class="regular-price ">$80.00</span>
-                                        <span class="old-price"><del>$90.00</del></span>
-                                    </div>
-                                    <a href="cart.html" class="btn product-cart">Add to Cart</a>
-                                </div>
                             </div>
-                            <!--Single Product End-->
-                        </div>
-                        <div class="single-item swiper-slide">
+                            <div class="product-content">
+                            <div class="product-title">
+                            <h4 class="title-2"> <a href="product-details.html">Jasmine flowers white</a></h4>
+                            </div>
+                            <div class="product-rating">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star-o"></i>
+                            <i class="fa fa-star-o"></i>
+                            </div>
+                            <div class="price-box">
+                            <span class="regular-price ">$80.00</span>
+                            <span class="old-price"><del>$90.00</del></span>
+                            </div>
+                            <a href="cart.html" class="btn product-cart">Add to Cart</a>
+                            </div>
+                            </div> *@
+                                <!--Single Product End-->
+                            </div>
+                        }
+                        
+
+                        @* } *@
+                        @* <div class="single-item swiper-slide">
                             <!--Single Product Start-->
                             <div class="single-product position-relative mb-30">
                                 <div class="product-image">
@@ -582,7 +577,7 @@
                                 </div>
                             </div>
                             <!--Single Product End-->
-                        </div>
+                        </div> *@
                     </div>
                     <!-- Slider pagination -->
                     <div class="swiper-pagination default-pagination"></div>
