--- a/CarRental/Views/Product/Details.cshtml
+++ b/CarRental/Views/Product/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Car
 @{
-    List<Car> productFeatured = ViewBag.productFeatured;
+    // List<Car> productFeatured = ViewBag.productFeatured;
+    List<Car> productRelated = ViewBag.productRelated;
 }
 <!-- Breadcrumb Area Start Here -->
 <div class="breadcrumbs-area position-relative">
@@ -306,7 +307,7 @@
             <div class="col-12 col-custom">
                 <div class="section-title text-center mb-30">
                     <span class="section-title-1">The Most Trendy</span>
-                    <h3 class="section-title-3">Featured Products</h3>
+                    <h3 class="section-title-3">Related Products</h3>
                 </div>
             </div>
             <!--Section Title End-->
@@ -315,13 +316,14 @@
             <div class="col-12 col-custom">
                 <div class="product-slider swiper-container anime-element-multi">
                     <div class="swiper-wrapper">
-                        @foreach(var item in productFeatured)
+                        @foreach(var item in productRelated)
                         {
+                            string Rurl = $"/product/{item.Alias}-{item.CarId}.html";
                             <div class="single-item swiper-slide">
                                 <!--Single Product Start-->
                                 <div class="single-product position-relative mb-30">
                                     <div class="product-image">
-                                        <a class="d-block" href="product-details.html">
+                                        <a class="d-block" href="@Rurl">
                                             <img src="~/assets/images/CarImage/@item.Image" alt="" class="product-image-1 w-100">
                                             <img src="~/assets/images/CarImage/@item.Image" alt="" class="product-image-2 position-absolute w-100">
                                         </a>
@@ -357,7 +359,78 @@
                                     </div>
                                 </div>
                                 <!--Single Product End-->
+                                <div class="modal flosun-modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                        <div class="modal-content">
+                                            <button type="button" class="close close-button" data-bs-dismiss="modal" aria-label="Close">
+                                                <span class="close-icon" aria-hidden="true">x</span>
+                                            </button>
+                                            <div class="modal-body">
+                                                <div class="container-fluid custom-area">
+                                                    <div class="row">
+                                                        <div class="col-md-6 col-custom">
+                                                            <div class="modal-product-img">
+                                                                <a class="w-100" href="#">
+                                                                    <img class="w-100" src="~/assets/images/product/large-size/1.jpg" alt="Product">
+                                                                </a>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6 col-custom">
+                                                            <div class="modal-product">
+                                                                <div class="product-content">
+                                                                    <div class="product-title">
+                                                                        <h4 class="title">Product dummy name</h4>
+                                                                    </div>
+                                                                    <div class="price-box">
+                                                                        <span class="regular-price ">$80.00</span>
+                                                                        <span class="old-price"><del>$90.00</del></span>
+                                                                    </div>
+                                                                    <div class="product-rating">
+                                                                        <i class="fa fa-star"></i>
+                                                                        <i class="fa fa-star"></i>
+                                                                        <i class="fa fa-star"></i>
+                                                                        <i class="fa fa-star-o"></i>
+                                                                        <i class="fa fa-star-o"></i>
+                                                                        <span>1 Review</span>
+                                                                    </div>
+                                                                    <p class="desc-content">we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame bel...</p>
+                                                                    <form class="d-flex flex-column w-100" action="#">
+                                                                        <div class="form-group">
+                                                                            <select class="form-control nice-select w-100">
+                                                                                <option>S</option>
+                                                                                <option>M</option>
+                                                                                <option>L</option>
+                                                                                <option>XL</option>
+                                                                                <option>XXL</option>
+                                                                            </select>
+                                                                        </div>
+                                                                    </form>
+                                                                    <div class="quantity-with-btn">
+                                                                        <div class="quantity">
+                                                                            <div class="cart-plus-minus">
+                                                                                <input class="cart-plus-minus-box" value="0" type="text">
+                                                                                <div class="dec qtybutton">-</div>
+                                                                                <div class="inc qtybutton">+</div>
+                                                                                <div class="dec qtybutton"><i class="fa fa-minus"></i></div>
+                                                                                <div class="inc qtybutton"><i class="fa fa-plus"></i></div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="add-to_btn">
+                                                                            <a class="btn product-cart button-icon flosun-button dark-btn" href="cart.html">Add to cart</a>
+                                                                            <a class="btn flosun-button secondary-btn rounded-0" href="wishlist.html">Add to wishlist</a>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
+                            
                         }
                         
                     </div>
