--- a/CarRental/Views/Home/Index.cshtml
+++ b/CarRental/Views/Home/Index.cshtml
@@ -608,72 +608,7 @@
                     <!--Section Title End-->
                 </div>
                 <div class="row">
-                    <div class="col-12 col-md-4 col-lg-4 col-custom mb-30">
-                        <div class="blog-lst">
-                            <div class="single-blog">
-                                <div class="blog-image">
-                                    <a class="d-block" href="blog-details-fullwidth.html">
-                                        <img src="~/assets/images/blog/blog1.jpg" alt="Blog Image" class="w-100">
-                                    </a>
-                                </div>
-                                <div class="blog-content">
-                                    <div class="blog-text">
-                                        <h4><a href="blog-details-fullwidth.html">Standard blog post One</a></h4>
-                                        <div class="blog-post-info">
-                                            <span><a href="#">By admin</a></span>
-                                            <span>December 18, 2022</span>
-                                        </div>
-                                        <p>Lorem ipsu dolor sit amet cons elits cumque adipisicing, sed do incid eiusmod tempor ut labore et dolore eveniet .</p>
-                                        <a href="blog-details-fullwidth.html" class="readmore">Read More <i class="fa fa-long-arrow-right"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-4 col-lg-4 col-custom mb-30">
-                        <div class="blog-lst">
-                            <div class="single-blog">
-                                <div class="blog-image">
-                                    <a class="d-block" href="blog-details-fullwidth.html">
-                                        <img src="~/assets/images/blog/blog3.jpg" alt="Blog Image" class="w-100">
-                                    </a>
-                                </div>
-                                <div class="blog-content">
-                                    <div class="blog-text">
-                                        <h4><a href="blog-details-fullwidth.html">New Collection Two</a></h4>
-                                        <div class="blog-post-info">
-                                            <span><a href="#">By admin</a></span>
-                                            <span>December 18, 2022</span>
-                                        </div>
-                                        <p>Lorem ipsu dolor sit amet cons elits cumque adipisicing, sed do incid eiusmod tempor ut labore et dolore eveniet .</p>
-                                        <a href="blog-details-fullwidth.html" class="readmore">Read More <i class="fa fa-long-arrow-right"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-4 col-lg-4 col-custom mb-30">
-                        <div class="blog-lst">
-                            <div class="single-blog">
-                                <div class="blog-image">
-                                    <a class="d-block" href="blog-details-fullwidth.html">
-                                        <img src="~/assets/images/blog/blog2.jpg" alt="Blog Image" class="w-100">
-                                    </a>
-                                </div>
-                                <div class="blog-content">
-                                    <div class="blog-text">
-                                        <h4><a href="blog-details-fullwidth.html">Standard blog post three</a></h4>
-                                        <div class="blog-post-info">
-                                            <span><a href="#">By admin</a></span>
-                                            <span>December 18, 2022</span>
-                                        </div>
-                                        <p>Lorem ipsu dolor sit amet cons elits cumque adipisicing, sed do incid eiusmod tempor ut labore et dolore eveniet .</p>
-                                        <a href="blog-details-fullwidth.html" class="readmore">Read More <i class="fa fa-long-arrow-right"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    @await Component.InvokeAsync("Blog")
                 </div>
             </div>
         </div>
