--- a/CarRental/Views/Home/Index.cshtml
+++ b/CarRental/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     List<Car> productFeatured = ViewBag.productFeatured;
     List<Car> productDealofDay = ViewBag.productDealofDay;
+    List<Blog> blogs = ViewBag.Blog;
 }
 <!-- Slider/Intro Section Start -->
 <div class="intro11-slider-wrap section">
@@ -608,7 +609,33 @@
                     <!--Section Title End-->
                 </div>
                 <div class="row">
-                    @await Component.InvokeAsync("Blog")
+                    @* @await Component.InvokeAsync("Blog") *@
+            @foreach (var item in blogs.Take(3))
+            {
+                <div class="col-12 col-md-4 col-lg-4 col-custom mb-30">
+                    <div class="blog-lst">
+                        <div class="single-blog">
+                            <div class="blog-image">
+                                <a class="d-block" href="blog-details-fullwidth.html">
+                                    <img src="~/assets/images/blog/@item.Image" alt="Blog Image" class="w-100">
+                                </a>
+                            </div>
+                            <div class="blog-content">
+                                <div class="blog-text">
+                                    <h4><a href="blog-details-fullwidth.html">@item.Title</a></h4>
+                                    <div class="blog-post-info">
+                                        <span><a href="#">By @item.CreatedBy</a></span>
+                                        <span>@item.CreatedDate.Value.ToString("dd/MM/yyyy")</span>
+                                    </div>
+                                    <p>@item.Description.</p>
+                                    <a href="blog-details-fullwidth.html" class="readmore">Read More <i class="fa fa-long-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            }
                 </div>
             </div>
         </div>
