--- a/CarRental/Views/Shared/Components/Blog/Default.cshtml
+++ b/CarRental/Views/Shared/Components/Blog/Default.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<Blog>
-@foreach(var item in Model.Take(3))
+@foreach(var item in Model)
 {
-    <div class="col-12 col-md-4 col-lg-4 col-custom mb-30">
+    <div class="col-12 col-custom mb-30">
         <div class="blog-lst">
             <div class="single-blog">
                 <div class="blog-image">
                     <a class="d-block" href="blog-details-fullwidth.html">
-                        <img src="~/assets/images/blog/@item.Image" alt="Blog Image" class="w-100">
+                        <img src="assets/images/blog/@item.Image" alt="Blog Image" class="w-100">
                     </a>
                 </div>
                 <div class="blog-content">
@@ -16,12 +16,12 @@
                             <span><a href="#">By @item.CreatedBy</a></span>
                             <span>@item.CreatedDate.Value.ToString("dd/MM/yyyy")</span>
                         </div>
-                        <p>@item.Description.</p>
+                        <p>@item.Description</p>
                         <a href="blog-details-fullwidth.html" class="readmore">Read More <i class="fa fa-long-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+   
 }
