--- a/CarRental/Views/Shared/Components/Product/Default.cshtml
+++ b/CarRental/Views/Shared/Components/Product/Default.cshtml
@@ -7,8 +7,8 @@
             <div class="single-product position-relative mr-0 ml-0">
                 <div class="product-image">
                     <a class="d-block" href="@url">
-                        <img src="~/assets/images/CarImage/@item.Image" alt="" class="product-image-1 w-100">
-                        <img src="~/assets/images/CarImage/@item.Image" alt="" class="product-image-2 position-absolute w-100">
+                        <img src="@item.Image" alt="" class="product-image-1 w-100">
+                        <img src="@item.Image" alt="" class="product-image-2 position-absolute w-100">
                     </a>
                     <span class="onsale">Sale!</span>
                     <div class="add-action d-flex flex-column position-absolute">
