--- a/CarRental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CarRental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -16,25 +16,11 @@
     <link rel="stylesheet" href="~/admin/assets/vendors/bootstrap-icons/bootstrap-icons.css">
     <link rel="stylesheet" href="~/admin/assets/css/app.css">
     <link rel="shortcut icon" href="~/admin/assets/images/favicon.svg" type="image/x-icon">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    @* <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> *@
 
+    <script src="~/admin/assets/vendors/jquery/jquery.min.js"></script>
 
-       <link rel="stylesheet" href="~/admin/lib/snote/jquery.min.js" />
-    <link rel="stylesheet" href="~/admin/lib/snote/bootstrap.bundle.min.js" />
-    <link rel="stylesheet" href="~/admin/lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/admin/lib/snote/summernote-bs4.min.js" />
-    <link rel="stylesheet" href="~/admin/lib/snote/summernote-bs4.min.css" />
-
-    <link rel="stylesheet" href="~/admin/lib/jqueryui/themes/themes/base/theme.css" />
-    <link rel="stylesheet" href="~/admin/lib/jqueryui/themes/jquery-ui.css" />
-    <link rel="stylesheet" href="~/admin/lib/elfinder/css/elfinder.full.css" />
-    <link rel="stylesheet" href="~/admin/lib/elfinder/css/theme.min.css" />
-
-    @* <link rel="stylesheet" href="~/admin/elfinder-material-theme/Material/css/theme-light.min.css" /> *@
-
-    <script src="~/admin/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/admin/lib/jqueryui/jquery-ui.min.js"></script>
-    <script src="~/admin/lib/elfinder/js/elfinder.min.js"></script>
+   
 
 </head>
 
@@ -409,6 +395,7 @@
     <script src="~/admin/assets/js/pages/dashboard.js"></script>
 
     <script src="~/admin/assets/js/main.js"></script>
+    
 </body>
 
 </html>
