Logout and eidt sidebar of Dashboard

--- a/CarRental/Areas/Admin/Views/Login/Index.cshtml
+++ b/CarRental/Areas/Admin/Views/Login/Index.cshtml
@@ -57,8 +57,7 @@
                     </form>
                     <div class="text-center mt-5 text-lg fs-4">
                         <p class="text-gray-600">
-                            Don't have an account? <a href="auth-register.html"
-                                                      class="font-bold">
+                            Don't have an account? <a asp-controller="Register" asp-action="Index">
                                 Sign
                                 up
                             </a>.
