--- a/CarRental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CarRental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                             </ul>
                         </li>
                         <li class="sidebar-item  ">
-                            <a href="/Admin/Home/Logout" class='sidebar-link'>
+                            <a asp-controller="Account" asp-action="Edit" class='sidebar-link'>
                                 <i class="bi bi-person-circle"></i>
                                 <span>Account</span>
                             </a>
