--- a/CarRental/Views/Home/Index.cshtml
+++ b/CarRental/Views/Home/Index.cshtml
@@ -116,8 +116,8 @@
                                         <div class="single-product position-relative mb-30">
                                             <div class="product-image">
                                                 <a class="d-block" href="product-details.html">
-                                                    <img src="~/assets/images/CarImage/@item.Image" alt="" class="product-image-1 w-100">
-                                                    <img src="~/assets/images/CarImage/@item.Image" alt="" class="product-image-2 position-absolute w-100">
+                                                    <img src="@item.Image" alt="" class="product-image-1 w-100">
+                                                    <img src="@item.Image" alt="" class="product-image-2 position-absolute w-100">
                                                 </a>
                                                 <span class="onsale">Sale!</span>
                                                 <div class="add-action d-flex flex-column position-absolute">
@@ -230,8 +230,8 @@
                                 <div class="single-product position-relative mb-30">
                                     <div class="product-image">
                                         <a class="d-block" href="product-details.html">
-                                            <img src="~/assets/images/CarImage/@item.Image" alt="" class="product-image-1 w-100">
-                                            <img src="~/assets/images/CarImage/@item.Image" alt="" class="product-image-2 position-absolute w-100">
+                                            <img src="@item.Image" alt="" class="product-image-1 w-100">
+                                            <img src="@item.Image" alt="" class="product-image-2 position-absolute w-100">
                                         </a>
                                         <span class="onsale">Sale!</span>
                                         <div class="add-action d-flex flex-column position-absolute">
