--- a/CarRental/Views/Shared/Components/Blog/Default.cshtml
+++ b/CarRental/Views/Shared/Components/Blog/Default.cshtml
@@ -6,7 +6,7 @@
         <div class="blog-lst">
             <div class="single-blog">
                 <div class="blog-image">
-                    <a class="d-block" href="blog-details-fullwidth.html">
+                    <a class="d-block" href="@url">
                         <img src="~/assets/images/blog/@item.Image" alt="Blog Image" class="w-100">
                     </a>
                 </div>
