manager blog post

--- a/CarRental/Views/Shared/Components/Blog/Default.cshtml
+++ b/CarRental/Views/Shared/Components/Blog/Default.cshtml
@@ -7,7 +7,7 @@
             <div class="single-blog">
                 <div class="blog-image">
                     <a class="d-block" href="@url">
-                        <img src="~/assets/images/blog/@item.Image" alt="Blog Image" class="w-100">
+                        <img src="@item.Image" alt="Blog Image" class="w-100">
                     </a>
                 </div>
                 <div class="blog-content">
