--- a/CarRental/Views/Blog/Details.cshtml
+++ b/CarRental/Views/Blog/Details.cshtml
@@ -26,17 +26,19 @@
                     <!-- Blog Details wrapper Area Start -->
                     <div class="blog-post-details">
                         <figure class="blog-post-thumb mb-5">
-                            <img src="~/assets/images/blog/@Model.Image" alt="Blog Image">
+                            <img src="@Model.Image" alt="Blog Image">
                         </figure>
                         <section class="blog-post-wrapper product-summery">
                             <div class="section-content section-title">
-                                <h2 class="section-title-2 mb-3">Standard blog post one</h2>
-                                <p class="mb-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage.</p>
-                                <blockquote class="blockquote mb-4">
+                                <h2 class="section-title-2 mb-3">@Model.Description</h2>
+                                <p class="mb-4">
+                                    @Html.Raw(Model.Detail)
+                                </p>
+                               @*  <blockquote class="blockquote mb-4">
                                     <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
                                 </blockquote>
                                 <p class="mb-5">and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-                            </div>
+                            </div> *@
                             <div class="share-article">
                                 <span class="left-side">
                                     <a href="#"> <i class="fa fa-long-arrow-left"></i> Older Post</a>
