Delete blog in admin

--- a/CarRental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CarRental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -64,6 +64,9 @@
                                     <a  asp-controller="Product" asp-action="Index">Quản lí sản phẩm</a>
                                 </li>
                                 <li class="submenu-item ">
+                                    <a asp-controller="Blogs" asp-action="Index">Quản lí Blog</a>
+                                </li>
+                                <li class="submenu-item ">
                                     <a href="/Admin/file-manager">Quản lí FILE</a>
                                 </li>
                                
